--- a/app/blocks/header-section/header-section.less
+++ b/app/blocks/header-section/header-section.less
@@ -5,9 +5,6 @@
 }
 
 .header-section_color_black{
-	display: block;
-	position: relative;
-	width: 100%;
 	background-color: #000;
 }
 
@@ -17,4 +14,21 @@
 
 .header-section__menu-user_float_right{
 	float: right;
+}
+
+.header-section_color_gray{
+	background-color: #333;
+}
+
+.header-section_padding-top{
+	padding-top: 8px;
+}
+
+.header-section__logo_margin-float_left{
+	float: left;
+	margin-right: 20px;
+}
+
+.header-section__menu-main_float_left{
+	float: left;
 }
