Blocks Absolut and baner

--- a/app/blocks/header-section/header-section.less
+++ b/app/blocks/header-section/header-section.less
@@ -32,3 +32,23 @@
 .header-section__menu-main_float_left{
 	float: left;
 }
+
+.header-section__logo-nav-wrap{
+	float: left;
+	width: 70%;
+}
+
+.header-section__absolut-banner-wrap{
+	width: 30%;
+	float: right;
+}
+
+.header-section__absolut{
+	float: right;
+	padding-top: 10px;
+	padding-right: 30px;
+}
+
+.header-section__baner{
+	float: right;
+}
