--- a/app/blocks/main-page/main-page.less
+++ b/app/blocks/main-page/main-page.less
@@ -67,7 +67,8 @@ body {
 .container {
   display: block;
   position: relative;
-  max-width: 1226px;
+  max-width: 1352px;
+  min-width: 952px;
   width: 100%;
   margin: 0 auto;
   padding: 0 24px;
