--- a/app/blocks/main-page/main-page.less
+++ b/app/blocks/main-page/main-page.less
@@ -67,9 +67,15 @@ body {
 .container {
   display: block;
   position: relative;
-  max-width: 1352px;
+  max-width: 1296px;
   min-width: 952px;
   width: 100%;
   margin: 0 auto;
   padding: 0 24px;
+}
+
+.container-main{
+  display: block;
+  position: relative;
+  width: 100%;
 }
