--- a/app/blocks/header-section/header-section.less
+++ b/app/blocks/header-section/header-section.less
@@ -17,7 +17,7 @@
 }
 
 .header-section_color_gray{
-	background-color: #333;
+	background-color: rgb(51,51,51,1);
 }
 
 .header-section_padding-top{
@@ -38,17 +38,12 @@
 	width: 70%;
 }
 
-.header-section__absolut-banner-wrap{
-	width: 30%;
-	float: right;
-}
-
-.header-section__absolut{
-	float: right;
-	padding-top: 10px;
-	padding-right: 30px;
-}
-
 .header-section__baner{
 	float: right;
+}
+
+.header-bottom__fixed{
+	position: fixed;
+	top: 0;
+	left: 0;
 }
