--- a/app/blocks/page/page.less
+++ b/app/blocks/page/page.less
@@ -3,5 +3,7 @@
 	max-width: 976px;
 	// width: 100%;
 	padding: 24px 24px 64px;
-	border: 1px solid #333;
+	border: 1px solid #ccc;
 }
+
+// box-shadow: 0 0 10px 1px rgba(0,0,0,0.3);
