--- a/app/blocks/side-bar/side-bar.less
+++ b/app/blocks/side-bar/side-bar.less
@@ -1,5 +1,39 @@
 .side-bar{
 	display: block;
 	width: 250px;
-	padding: 24px 10px;
+	padding: 24px 0 64px;
+	background: #ebebed;
+	border-left: 1px solid #ccc;
+}
+
+.side-bar__item{
+	display: block;
+	position: relative;
+	padding: 14px 14px 0;
+	text-decoration: none;
+	border-bottom: 1px solid #ccc;
+	&:hover{
+		background-color: #fff;
+	}
+}
+
+.side-bar__item-img{
+	border: 1px solid #CCCCCC;
+	width: 223px;
+	height: 148px;
+}
+
+.side-bar__item-name{
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 10px;
+	color: #000;
+}
+
+.side-bar__item-info{
+	line-height: 16px;
+	margin: 0;
+	padding: 0 15px 4px 0;
+	color: #666670;
+	font-size: 11px;
 }
