--- a/app/blocks/page/page.less
+++ b/app/blocks/page/page.less
@@ -1,9 +1,12 @@
 .page{
 	min-width: 740px;
 	max-width: 976px;
-	// width: 100%;
-	padding: 24px 24px 64px;
+	padding: 24px 24px 0;
 	border: 1px solid #ccc;
 }
 
-// box-shadow: 0 0 10px 1px rgba(0,0,0,0.3);
+.page_without-border{
+	border: none;
+	padding: 24px 0 14px;
+}
+
