Block other-stock

--- a/app/blocks/header-section/header-section.less
+++ b/app/blocks/header-section/header-section.less
@@ -26,16 +26,16 @@
 
 .header-section__logo_margin-float_left{
 	float: left;
-	margin-right: 20px;
+	margin-right: 8px;
 }
 
 .header-section__menu-main_float_left{
 	float: left;
 }
 
-.header-section__logo-nav-wrap{
+.header-section__logo-menu-wrap{
+	display: block;
 	float: left;
-	width: 70%;
 }
 
 .header-section__baner{
@@ -48,3 +48,4 @@
 	left: 0;
 	z-index: 100;
 }
+
