--- a/app/blocks/menu-main/menu-main.less
+++ b/app/blocks/menu-main/menu-main.less
@@ -1,7 +1,7 @@
 .menu-main{
 	display: block;
 	position: relative;
-	width: 62%;
+	width: 721px;
 	text-align: left;
 	color: #b9b9c3;
 	font-size: 15px;
@@ -17,7 +17,7 @@
 	display: inline-block;
 	position: relative;
 	vertical-align: top;
-	margin: 0 5px;
+	margin: 0 2px;
 	&:first-child{
 		margin-left: 0;
 	}
@@ -53,6 +53,13 @@
 	fill: #fff;
 }
 #absolut-svg:hover{
+	fill: #00CCFF; 
+}
+
+.cls-1{
+	fill: #fff;
+}
+.cls-1:hover{
 	fill: #00CCFF; 
 }
 
